added MORE files

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>HW8 | Psych 314</title>
+  <title>Homework 8 | Psych 314</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>  <link rel="stylesheet" type="text/css" href="styles.css">
 <script type="text/javascript">
 var imgLinks = [
 // format: ['imageSource','imageLinkURL'],
   ['https://aditibhandari.github.io/psych-314/img/pizza.png','eat a large pepperoni pizza every day for 11.7 years'],
-  ['https://aditibhandari.github.io/psych-314/img/beats.png','buy 213 Beats Solo2 Wireless Headphones'],
+  ['https://aditibhandari.github.io/psych-314/img/beats.png','wear 213 Beats Solo2 Wireless Headphones'],
   ['https://aditibhandari.github.io/psych-314/img/kittens.png','adopt 426 kittens'],
-  ['https://aditibhandari.github.io/psych-314/img/adele.png','buy 427 Reserved Seating tickets to the Adele concert in Minnesota'],
+  ['https://aditibhandari.github.io/psych-314/img/adele.png','buy 427 Reserved Seating tickets to an Adele concert in Minnesota'],
   ['https://aditibhandari.github.io/psych-314/img/netflix.png','watch Netflix for 667 years'],
   ['https://aditibhandari.github.io/psych-314/img/tidal.png','listen to The Life of Pablo on TIDAL for 266 years'],
-  ['http://img14.deviantart.net/94b7/i/2011/193/3/9/my_hogwarts_diploma_by_joekabox-d3nl7ma.jpg','get ~a quarter of a 4-year college diploma'],
+  ['https://aditibhandari.github.io/psych-314/img/hogwarts.jpg','get ~a quarter of a 4-year college diploma'],
   ['http://farm8.static.flickr.com/7033/6757860435_e0d0defc90.jpg','hire someone to work for Illinois minimum wage for 3.7 years'],
   ['https://c2.staticflickr.com/2/1028/3175273078_5608ec13f7.jpg','read 639 complete hardback Harry Potter box sets'],
   ['https://aditibhandari.github.io/psych-314/img/hotel.png','spend 3 nights in a Signature suite at the 7-star Atlantis The Palm hotel in Dubai'],
@@ -42,7 +42,7 @@ onload = function () { RandomLink(); }
 <body>
 
 <div class="wrapper">
-  <h1></h1>
+  <h1>What Would You Buy?</h1>
   <h3>The cost of tuition, room and fees at Northwestern has been <span class="purp">steadily increasing</span> over the last few years, with the current year being the <span class="purp">highest so far</span>.</h3>
   <img id="chart" src="img/chart.png">
 
