--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ onload = function () { RandomLink(); }
 <body>
 
 <div class="wrapper">
-  <h1></h1>
+  <h1>What Would You Buy?</h1>
   <h3>The cost of tuition, room and fees at Northwestern has been <span class="purp">steadily increasing</span> over the last few years, with the current year being the <span class="purp">highest so far</span>.</h3>
   <img id="chart" src="img/chart.png">
 
